# ai-eng-assignment

./: .gitignore  NOTES.md  README.md  project-prompt.md  pyproject.toml
data/: recipe_10813_best-chocolate-chip-cookies.json  recipe_11776_grandma-39-s-homemade-noodles.json  recipe_144299_nikujaga-japanese-style-meat-and-potatoes-.json  recipe_19117_spicy-apple-cake.json  recipe_200283_spinach-basil-pesto.json  recipe_21793_zucchini-tomato-pie.json  recipe_284494_spiced-purple-plum-jam.json  recipe_45613_mango-teriyaki-marinade.json  recipe_6709_zucchini-walnut-bread.json  recipe_6887_homemade-croutons.json  recipe_77935_creamy-sweet-potato-with-ginger-soup.json
data/enhanced/: enhanced_10813_best-chocolate-chip-cookies.json  enhanced_19117_spicy-apple-cake.json  enhanced_200283_spinach-basil-pesto.json  enhanced_21793_zucchini-tomato-pie.json  enhanced_6887_homemade-croutons.json  enhanced_77935_creamy-sweet-potato-with-ginge.json
docs/: conventional-commits.md  pull_request_template.md  react_optimizor.md
frontend/: README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/recipes/: route.ts
frontend/types/: types.ts
src/: app.py  scraper_v2.py  test_pipeline.py
src/data/enhanced/: enhanced_10813_best-chocolate-chip-cookies.json  enhanced_144299_nikujaga-(japanese-style-meat-.json  enhanced_19117_spicy-apple-cake.json  enhanced_77935_creamy-sweet-potato-with-ginge.json  pipeline_summary_report.json
src/llm_pipeline/: __init__.py  enhanced_recipe_generator.py  models.py  pipeline.py  prompts.py  recipe_modifier.py  tweak_extractor.py
(+3 files in other folders)
